Fix crashes while parsing template parameters in C++ code

AlreadyConsideredClassContainer has to be cleared when there is no base class

Task-number: QTCREATORBUG-8128

Change-Id: Iad82f2efc361aeb38c88a751c86aa572d373557a
Reviewed-by: Cristian Tibirna <tibirna@kde.org>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: David Schulz <david.schulz@digia.com>